💄 Fix z-index for KaraLine

--- a/kmfrontend/src/frontend/components/karas/KaraLine.scss
+++ b/kmfrontend/src/frontend/components/karas/KaraLine.scss
@@ -104,7 +104,7 @@ body:not(.touch) {
 		flex: 0 0 auto;
 		align-items: center;
 		button {
-			z-index: 21;
+			z-index: 9;
 			position: relative;
 		}
 		// .dragHandle: in playlists, the three-dot handle to drag
